aula-8/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: loki.localhost
      http:
        paths:
          - path: /loki/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: loki-gateway
                port:
                  number: 80
